--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,8 @@ url = "https://pypi.python.org/simple"
 name = "pypi"
 
 [dev-packages]
+neovim = "*"
+virtualfish = "*"
 
 [packages]
 ipython = "*"
@@ -15,7 +17,6 @@ pydub = "*"
 pytest = "*"
 requests = "*"
 "beautifulsoup4" = "*"
-neovim = "*"
 
 [requires]
 python_version = "3.5"
