--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,9 @@
-image: "python:3.5"
+image: "python:3.7"
 
 before_script:
-    - apt-get update -qy && apt-get install -y python3-dev python3-pip
-    - pip3 install pipenv
-    - pipenv install
+    - apt-get update -qy
+    - pip install -r requirements.txt
 
 run_tests:
     script:
-        - pipenv run pytest
+        - pytest
