--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: "python:3.7"
 
 before_script:
     - apt-get update -qy
+    - apt-get install -qy libsndfile1
     - pip install -r requirements.txt
 
 run_tests:
